apps/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  annotations:
    tailscale.com/proxy-group: web-proxies
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: uptime-kuma
      port:
        number: 3001
  ingressClassName: tailscale
  tls:
    - hosts:
        - uptime
